objects/MFG_Discrete_Partners_Scorecard__c.object
<CustomObject>
    <fields>
        <fullName>Availability_Comments__c</fullName>
        <label>Availability Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Availability_Score__c</fullName>
        <label>Availability Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Strategy</label>
        <referenceTo>MFG_Discrete_Partners_Category_Strategy__c</referenceTo>
        <relationshipLabel>Scorecards</relationshipLabel>
        <relationshipName>Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Late__c</fullName>
        <label># Days Late</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Early</fullName>
                </value>
                <value>
                    <fullName>On Time</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Parts_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desired Parts Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parts_Available__c</fullName>
        <formula>(100- (100*Parts_on_Backorder__c))/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Parts Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parts_on_Backorder__c</fullName>
        <label>% Parts on Backorder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Scorecards</relationshipLabel>
        <relationshipName>Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Comments__c</fullName>
        <label>Quality Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Quality_Score__c</fullName>
        <label>Quality Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responsiveness_Comments__c</fullName>
        <label>Responsiveness Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Responsiveness_Score__c</fullName>
        <label>Responsiveness Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Defects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Defects?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Communication__c</fullName>
        <label>Supplier Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>⭐ Poor</fullName>
                </value>
                <value>
                    <fullName>⭐⭐ Fair</fullName>
                </value>
                <value>
                    <fullName>⭐⭐⭐ Good</fullName>
                </value>
                <value>
                    <fullName>⭐⭐⭐⭐ Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scorecards</relationshipLabel>
        <relationshipName>Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <label>Time Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Defects__c</fullName>
        <label># of Defects</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_RMAs__c</fullName>
        <label># of RMAs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scorecard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier__c</columns>
        <columns>Days_Late__c</columns>
        <columns>of_Defects__c</columns>
        <columns>of_RMAs__c</columns>
        <columns>Parts_Available__c</columns>
        <columns>Availability_Score__c</columns>
        <columns>Quality_Score__c</columns>
        <columns>Responsiveness_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Scorecards</fullName>
        <columns>NAME</columns>
        <columns>Days_Late__c</columns>
        <columns>Parts_Available__c</columns>
        <columns>Availability_Score__c</columns>
        <columns>Quality_Score__c</columns>
        <columns>Responsiveness_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Scorecards</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>